--- a/ecommerce-project/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
+++ b/ecommerce-project/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-table.component.html
@@ -2,6 +2,7 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
+            <th></th>
             <th>Name</th>
             <th>Price</th>
             <th>Units In Stock</th>
@@ -10,9 +11,12 @@
     </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <td>{{ tempProduct.name}}</td>
-            <td> {{tempProduct.unitPrice | currency:'CAD'}}</td>
-            <td>{{ tempProduct.unitsInStock}}</td>
+            <td class="align-middle">
+                <img src="{{tempProduct.imageUrl}}" height="50"/>
+            </td>
+            <td class="align-middle">{{ tempProduct.name}}</td>
+            <td class="align-middle"> {{tempProduct.unitPrice | currency:'CAD'}}</td>
+            <td class="align-middle">{{ tempProduct.unitsInStock}}</td>
         </tr>
 
     </tbody>
